feat: add bill domain
